<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVL_SXR_VAC" Id="{abb060cf-858a-46f1-b748-697dab0c9944}">
    <Declaration><![CDATA[VAR_GLOBAL


// ST_Volume

st_START : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_RTDS : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_GMD : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_GATT : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_XGMD : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_EM2K0_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_TV2K0_VGC_1_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_MR1K1_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_MR_K3_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_SP1K1_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_SP1K1_MONO_VGC_2_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_IM1K2_PPM_VGC_1_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_TV3K0_VGC_1_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_MR1K4_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_TV1K4_VGC_1_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_TV1K4_VGC_2_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);
st_PC4K4_VOL : ST_Volume := (rVolume := 1E3, rPressure := Global_Pressure, rVLeak := Global_Leak);

// ST_VacuumValve

st_RTDSK0_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_EM1K0_GMD_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_AT1K0_GAS_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_EM1K0_XGMD_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_EM1K0_XGMD_VGC_2 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_TV2K0_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_MR1K1_BEND_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_MR1K3_TXI_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_SP1K1_MONO_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_SP1K1_MONO_VGC_2 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_IM1K2_PPM_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_TV3K0_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_MR1K4_SOMS_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_TV1K4_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_TV1K4_VGC_2 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);
st_ST3K4_XTES_VGC_1 : ST_VacuumValve := (q_xClsLS := TRUE, q_xOpnLS := FALSE);

// FB_VacuumValve

fb_RTDSK0_VGC_1 : FB_VacuumValve;
fb_EM1K0_GMD_VGC_1 : FB_VacuumValve;
fb_AT1K0_GAS_VGC_1 : FB_VacuumValve;
fb_EM1K0_XGMD_VGC_1 : FB_VacuumValve;
fb_EM1K0_XGMD_VGC_2 : FB_VacuumValve;
fb_TV2K0_VGC_1 : FB_VacuumValve;
fb_MR1K1_BEND_VGC_1 : FB_VacuumValve;
fb_MR1K3_TXI_VGC_1 : FB_VacuumValve;
fb_SP1K1_MONO_VGC_1 : FB_VacuumValve;
fb_SP1K1_MONO_VGC_2 : FB_VacuumValve;
fb_IM1K2_PPM_VGC_1 : FB_VacuumValve;
fb_TV3K0_VGC_1 : FB_VacuumValve;
fb_MR1K4_SOMS_VGC_1 : FB_VacuumValve;
fb_TV1K4_VGC_1 : FB_VacuumValve;
fb_TV1K4_VGC_2 : FB_VacuumValve;
fb_ST3K4_XTES_VGC_1 : FB_VacuumValve;

// ST_MKS_422

st_DMPS_GCC_1 : ST_MKS_422 := (q_xGaugeConnected := TRUE);
st_IM2K0_XTES_GCC_1 : ST_MKS_422 := (q_xGaugeConnected := TRUE);
st_PCPM3B_GFS_1 : ST_MKS_422 := (q_xGaugeConnected := TRUE);
st_SL1K0_GCC_1 : ST_MKS_422 := (q_xGaugeConnected := TRUE);
st_TV2K0_GCC_1 : ST_MKS_422 := (q_xGaugeConnected := TRUE);
st_TV2K0_GCC_2 : ST_MKS_422 := (q_xGaugeConnected := TRUE);
st_PA1K0_GCC_1 : ST_MKS_422 := (q_xGaugeConnected := TRUE);
st_MR1K1_BEND_GCC_1 : ST_MKS_422 := (q_xGaugeConnected := TRUE);

// FB_MKS_422

fb_DMPS_GCC_1 : FB_MKS_422;
fb_IM2K0_XTES_GCC_1 : FB_MKS_422;
fb_PCPM3B_GFS_1 : FB_MKS_422;
fb_SL1K0_GCC_1 : FB_MKS_422;
fb_TV2K0_GCC_1 : FB_MKS_422;
fb_TV2K0_GCC_2 : FB_MKS_422;
fb_PA1K0_GCC_1 : FB_MKS_422;
fb_MR1K1_BEND_GCC_1 : FB_MKS_422;

// ST_MKS_275

st_DMPS_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_IM2K0_XTES_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_SL1K0_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_TV2K0_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_TV2K0_GPI_2 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_PA1K0_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_MR1K1_BEND_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_MR2K3_TXI_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_MR1K3_TXI_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_SP1K1_MONO_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_TV3K0_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_MR1K4_SOMS_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_TV1K4_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_ST1K4_TEST_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_ST2K4_BCS_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);
st_PC4K4_XTES_GPI_1 : ST_MKS_275 := (q_xGaugeConnected := TRUE);

// FB_MKS_275

fb_DMPS_GPI_1 : FB_MKS_275;
fb_IM2K0_XTES_GPI_1 : FB_MKS_275;
fb_SL1K0_GPI_1 : FB_MKS_275;
fb_TV2K0_GPI_1 : FB_MKS_275;
fb_TV2K0_GPI_2 : FB_MKS_275;
fb_PA1K0_GPI_1 : FB_MKS_275;
fb_MR1K1_BEND_GPI_1 : FB_MKS_275;
fb_MR2K3_TXI_GPI_1 : FB_MKS_275;
fb_MR1K3_TXI_GPI_1 : FB_MKS_275;
fb_SP1K1_MONO_GPI_1 : FB_MKS_275;
fb_TV3K0_GPI_1 : FB_MKS_275;
fb_MR1K4_SOMS_GPI_1 : FB_MKS_275;
fb_TV1K4_GPI_1 : FB_MKS_275;
fb_ST1K4_TEST_GPI_1 : FB_MKS_275;
fb_ST2K4_BCS_GPI_1 : FB_MKS_275;
fb_PC4K4_XTES_GPI_1 : FB_MKS_275;

// ST_GAM_PIP

st_RTDSK0_PIP_1 : ST_GAM_PIP;
st_RTDSK0_PIP_2 : ST_GAM_PIP;
st_RTDSK0_PIP_3 : ST_GAM_PIP;
st_RTDSK0_PIP_4 : ST_GAM_PIP;
st_RTDSK0_PIP_5 : ST_GAM_PIP;
st_PCPM3B_PIP_1 : ST_GAM_PIP;
st_PA1K0_PIP_1 : ST_GAM_PIP;
st_PA1K0 : ST_GAM_PIP;
st_MR1K1_BEND_PIP_1 : ST_GAM_PIP;
st_MR2K3_TXI_PIP_1 : ST_GAM_PIP;
st_MR1K3_TXI_PIP_1 : ST_GAM_PIP;
st_SP1K1_MONO_PIP_1 : ST_GAM_PIP;
st_SP1K1_MONO_PIP_2 : ST_GAM_PIP;
st_TV3K0_PIP_1 : ST_GAM_PIP;
st_MR1K4_SOMS_PIP_1 : ST_GAM_PIP;
st_ST1K4_TEST_PIP_1 : ST_GAM_PIP;
st_ST2K4_BCS_PIP_1 : ST_GAM_PIP;
st_ST3K4_PPS_PIP_1 : ST_GAM_PIP;
st_PC4K4_XTES_PIP_1 : ST_GAM_PIP;

// FB_GAM_PIP

fb_RTDSK0_PIP_1 : FB_GAM_PIP;
fb_RTDSK0_PIP_2 : FB_GAM_PIP;
fb_RTDSK0_PIP_3 : FB_GAM_PIP;
fb_RTDSK0_PIP_4 : FB_GAM_PIP;
fb_RTDSK0_PIP_5 : FB_GAM_PIP;
fb_PCPM3B_PIP_1 : FB_GAM_PIP;
fb_PA1K0_PIP_1 : FB_GAM_PIP;
fb_PA1K0 : FB_GAM_PIP;
fb_MR1K1_BEND_PIP_1 : FB_GAM_PIP;
fb_MR2K3_TXI_PIP_1 : FB_GAM_PIP;
fb_MR1K3_TXI_PIP_1 : FB_GAM_PIP;
fb_SP1K1_MONO_PIP_1 : FB_GAM_PIP;
fb_SP1K1_MONO_PIP_2 : FB_GAM_PIP;
fb_TV3K0_PIP_1 : FB_GAM_PIP;
fb_MR1K4_SOMS_PIP_1 : FB_GAM_PIP;
fb_ST1K4_TEST_PIP_1 : FB_GAM_PIP;
fb_ST2K4_BCS_PIP_1 : FB_GAM_PIP;
fb_ST3K4_PPS_PIP_1 : FB_GAM_PIP;
fb_PC4K4_XTES_PIP_1 : FB_GAM_PIP;

// ST_MKS_500

st_MR2K3_TXI_GCC_1 : ST_MKS_500 := (q_xGaugeConnected := TRUE);
st_MR1K3_TXI_GCC_1 : ST_MKS_500 := (q_xGaugeConnected := TRUE);
st_SP1K1_MONO_GCC_1 : ST_MKS_500 := (q_xGaugeConnected := TRUE);
st_TV3K0_GCC_1 : ST_MKS_500 := (q_xGaugeConnected := TRUE);
st_MR1K4_SOMS_GCC_1 : ST_MKS_500 := (q_xGaugeConnected := TRUE);
st_TV1K4_GCC_1 : ST_MKS_500 := (q_xGaugeConnected := TRUE);
st_ST1K4_TEST_GCC_1 : ST_MKS_500 := (q_xGaugeConnected := TRUE);
st_ST2K4_BCS_GCC_1 : ST_MKS_500 := (q_xGaugeConnected := TRUE);
st_PC4K4_XTES_GCC_1 : ST_MKS_500 := (q_xGaugeConnected := TRUE);

// FB_MKS_500

fb_MR2K3_TXI_GCC_1 : FB_MKS_500;
fb_MR1K3_TXI_GCC_1 : FB_MKS_500;
fb_SP1K1_MONO_GCC_1 : FB_MKS_500;
fb_TV3K0_GCC_1 : FB_MKS_500;
fb_MR1K4_SOMS_GCC_1 : FB_MKS_500;
fb_TV1K4_GCC_1 : FB_MKS_500;
fb_ST1K4_TEST_GCC_1 : FB_MKS_500;
fb_ST2K4_BCS_GCC_1 : FB_MKS_500;
fb_PC4K4_XTES_GCC_1 : FB_MKS_500;

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>